--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,77 +1,96 @@
-/* Emphasis colors */
-.bg-accent-emphasis {
-  background-color: #0969da;
-}
-.bg-success-emphasis {
-  background-color: #1a7f37;
-}
-.bg-attention-emphasis {
-  background-color: #9a6700;
-}
-.bg-severe-emphasis {
-  background-color: #bc4c00;
-}
-.bg-danger-emphasis {
-  background-color: #cf222e;
-}
-.bg-done-emphasis {
-  background-color: #8250df;
-}
-.bg-sponsors-emphasis {
-  background-color: #1b7c83;
-}
-.bg-open-emphasis {
-  background-color: #6639ba;
-}
+:root {
+  /* Auburn */
+  --display-auburn-bgColor-emphasis: #9d615c;
+  --display-auburn-bgColor-muted: #f2e9e9;
+  --display-auburn-fgColor: #8a5551;
 
-/* Muted backgrounds */
-.bg-accent-muted {
-  background-color: #ddf4ff;
-}
-.bg-success-muted {
-  background-color: #dafbe1;
-}
-.bg-attention-muted {
-  background-color: #fff8c5;
-}
-.bg-severe-muted {
-  background-color: #fff1e5;
-}
-.bg-danger-muted {
-  background-color: #ffebe9;
-}
-.bg-done-muted {
-  background-color: #fbefff;
-}
-.bg-sponsors-muted {
-  background-color: #ddf4ff;
-}
-.bg-open-muted {
-  background-color: #f6f8fa;
-}
+  /* Blue */
+  --display-blue-bgColor-emphasis: #006edb;
+  --display-blue-bgColor-muted: #d1f0ff;
+  --display-blue-fgColor: #005fcc;
 
-/* Foreground colors */
-.fg-accent {
-  color: #0969da;
-}
-.fg-success {
-  color: #1a7f37;
-}
-.fg-attention {
-  color: #9a6700;
-}
-.fg-severe {
-  color: #bc4c00;
-}
-.fg-danger {
-  color: #cf222e;
-}
-.fg-done {
-  color: #8250df;
-}
-.fg-sponsors {
-  color: #1b7c83;
-}
-.fg-open {
-  color: #6639ba;
+  /* Brown */
+  --display-brown-bgColor-emphasis: #856d4c;
+  --display-brown-bgColor-muted: #eeeae2;
+  --display-brown-fgColor: #735c41;
+
+  /* Coral */
+  --display-coral-bgColor-emphasis: #d43511;
+  --display-coral-bgColor-muted: #ffe5db;
+  --display-coral-fgColor: #c13b1b;
+
+  /* Cyan */
+  --display-cyan-bgColor-emphasis: #007b94;
+  --display-cyan-bgColor-muted: #bdf4ff;
+  --display-cyan-fgColor: #006b80;
+
+  /* Gray */
+  --display-gray-bgColor-emphasis: #647182;
+  --display-gray-bgColor-muted: #e8ecf2;
+  --display-gray-fgColor: #596068;
+
+  /* Green */
+  --display-green-bgColor-emphasis: #2c8141;
+  --display-green-bgColor-muted: #caf7ca;
+  --display-green-fgColor: #266d37;
+
+  /* Indigo */
+  --display-indigo-bgColor-emphasis: #5a61e7;
+  --display-indigo-bgColor-muted: #e5e9ff;
+  --display-indigo-fgColor: #4d52c7;
+
+  /* Lemon */
+  --display-lemon-bgColor-emphasis: #866e04;
+  --display-lemon-bgColor-muted: #f7eea1;
+  --display-lemon-fgColor: #725e03;
+
+  /* Lime */
+  --display-lime-bgColor-emphasis: #527a29;
+  --display-lime-bgColor-muted: #e3f2b5;
+  --display-lime-fgColor: #426322;
+
+  /* Olive */
+  --display-olive-bgColor-emphasis: #64762d;
+  --display-olive-bgColor-muted: #f0f0ad;
+  --display-olive-fgColor: #546526;
+
+  /* Orange */
+  --display-orange-bgColor-emphasis: #b8500f;
+  --display-orange-bgColor-muted: #ffe7d1;
+  --display-orange-fgColor: #a0460d;
+
+  /* Pine */
+  --display-pine-bgColor-emphasis: #167e53;
+  --display-pine-bgColor-muted: #bff8db;
+  --display-pine-fgColor: #126b47;
+
+  /* Pink */
+  --display-pink-bgColor-emphasis: #ce2c85;
+  --display-pink-bgColor-muted: #ffe5f1;
+  --display-pink-fgColor: #b32574;
+
+  /* Plum */
+  --display-plum-bgColor-emphasis: #a830e8;
+  --display-plum-bgColor-muted: #f8e5ff;
+  --display-plum-fgColor: #912ac9;
+
+  /* Purple */
+  --display-purple-bgColor-emphasis: #894ceb;
+  --display-purple-bgColor-muted: #f1e5ff;
+  --display-purple-fgColor: #7841ca;
+
+  /* Red */
+  --display-red-bgColor-emphasis: #df0c24;
+  --display-red-bgColor-muted: #ffe2e0;
+  --display-red-fgColor: #c20a1f;
+
+  /* Teal */
+  --display-teal-bgColor-emphasis: #127e81;
+  --display-teal-bgColor-muted: #c7f5ef;
+  --display-teal-fgColor: #0f6d6f;
+
+  /* Yellow */
+  --display-yellow-bgColor-emphasis: #946a00;
+  --display-yellow-bgColor-muted: #ffec9e;
+  --display-yellow-fgColor: #7e5c00;
 }
